--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2048,3 +2048,13 @@ input, select, textarea {
 		#footer .copyright a {
 			color: inherit;
 		}
+
+
+/*CUSTOME OVERRIDES*/
+.thumb h2 {
+	text-shadow: 1px 1px #34a58e;
+}
+
+#header nav ul li {
+	padding-right: 20px;
+}
